Created page with "# Il existe plusieurs façons de lancer l'outil : #* Appuyez sur le bouton {{Button|[[Image:BIM_Layers.svg|16px]] [[BIM_Layers/fr|Gérer les calques]]}}. #* Sélectionnez l'option {{MenuCommand|Gérer → [[Image:BIM_Layers.svg|16px]] Gérer les couches}} du menu. # Définissez les options et appuyez sur {{Button|OK}}."

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -67,10 +67,10 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Layers.html" title="BIM Layers">Manage Layers</a></span> button.</li>
-<li>Select the <b>Manage &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Manage Layers</b> option from the menu.</li></ul></li>
-<li>Set options and press <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
+<ol><li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">G&eacute;rer les calques</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>G&eacute;rer &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> G&eacute;rer les couches</b> du menu.</li></ul></li>
+<li>D&eacute;finissez les options et appuyez sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
 </p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
@@ -127,15 +127,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116191537
+Cached time: 20260116191626
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 442/1000000
-Post&#8208;expand include size: 27405/2097152 bytes
-Template argument size: 10395/2097152 bytes
+Post&#8208;expand include size: 27418/2097152 bytes
+Template argument size: 10408/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -143,18 +143,18 @@ Unstrip post&#8208;expand size: 1123/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.057      1 -total
- 41.21%   10.325      1 Template:BIM_Tools_navi/fr
- 32.56%    8.158      2 Template:Navigation_menu_2
- 13.08%    3.278      1 Template:Userdocnavi/fr
- 11.65%    2.918      1 Template:GuiCommand/fr
- 10.39%    2.604      2 Template:Docnav/fr
- 10.26%    2.572      1 Template:Caption
-  5.67%    1.420      1 Template:MenuCommand
-  5.42%    1.358      2 Template:Button
+100.00%   24.422      1 -total
+ 37.30%    9.110      1 Template:BIM_Tools_navi/fr
+ 30.18%    7.371      2 Template:Navigation_menu_2
+ 15.56%    3.799      1 Template:Userdocnavi/fr
+ 13.56%    3.311      1 Template:GuiCommand/fr
+ 10.85%    2.649      2 Template:Docnav/fr
+  8.40%    2.051      1 Template:Caption
+  5.93%    1.448      2 Template:Button
+  5.23%    1.277      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191537 and revision id 1739163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191625 and revision id 1739165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
