--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -71,9 +71,10 @@
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">G&eacute;rer les calques</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>G&eacute;rer &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> G&eacute;rer les couches</b> du menu.</li></ul></li>
 <li>D&eacute;finissez les options et appuyez sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-<p>Refer to the documentation for <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> for more information on settings.
+<p>Pour plus d'informations sur les param&egrave;tres, consultez la documentation relative aux <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calque</a>.
+</p><p><span id="Notes"></span>
 </p>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
 <ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
 <li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
 <p><br>
@@ -127,13 +128,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116191626
+Cached time: 20260116191708
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 442/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.106 seconds
+Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27418/2097152 bytes
 Template argument size: 10408/2097152 bytes
 Highest expansion depth: 6/100
@@ -143,18 +144,18 @@ Unstrip post&#8208;expand size: 1123/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.422      1 -total
- 37.30%    9.110      1 Template:BIM_Tools_navi/fr
- 30.18%    7.371      2 Template:Navigation_menu_2
- 15.56%    3.799      1 Template:Userdocnavi/fr
- 13.56%    3.311      1 Template:GuiCommand/fr
- 10.85%    2.649      2 Template:Docnav/fr
-  8.40%    2.051      1 Template:Caption
-  5.93%    1.448      2 Template:Button
-  5.23%    1.277      1 Template:MenuCommand
+100.00%   20.359      1 -total
+ 40.18%    8.180      1 Template:BIM_Tools_navi/fr
+ 29.53%    6.011      2 Template:Navigation_menu_2
+ 16.52%    3.363      1 Template:Userdocnavi/fr
+ 12.77%    2.599      2 Template:Docnav/fr
+  9.18%    1.870      1 Template:GuiCommand/fr
+  7.08%    1.442      1 Template:MenuCommand
+  6.26%    1.274      1 Template:Caption
+  4.91%    0.999      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191625 and revision id 1739165. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191708 and revision id 1739169. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
