Created page with "* Utilisez le [[BIM_Layers/fr|gestionnaire de calques BIM]] pour créer de nouveaux calques BIM. Pour créer des [[Draft_Layer/fr|Draft Calques]], appuyez sur le bouton [[File:Draft_tray_button_layer.png]] dans la [[Draft_Layer/fr|barre de Draft]]. * Les [[Draft_Layer/fr|Draft Calques]] ont des paramètres légèrement différents de ceux des calques BIM. Ne les mélangez pas, sauf si vous comprenez les [https://forum.freecad.org/viewtopic.php?t=102246 différences]."

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Ebenen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Warstwy (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -75,8 +75,8 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
-<li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
+<ul><li>Utilisez le <a class="mw-selflink selflink">gestionnaire de calques BIM</a> pour cr&eacute;er de nouveaux calques BIM. Pour cr&eacute;er des <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a>, appuyez sur le bouton <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> dans la <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">barre de Draft</a>.</li>
+<li>Les <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a> ont des param&egrave;tres l&eacute;g&egrave;rement diff&eacute;rents de ceux des calques BIM. Ne les m&eacute;langez pas, sauf si vous comprenez les <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">diff&eacute;rences</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -128,34 +128,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116191708
+Cached time: 20260116192030
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.106 seconds
+CPU time usage: 0.111 seconds
+Real time usage: 0.145 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27418/2097152 bytes
 Template argument size: 10408/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1123/5000000 bytes
+Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.359      1 -total
- 40.18%    8.180      1 Template:BIM_Tools_navi/fr
- 29.53%    6.011      2 Template:Navigation_menu_2
- 16.52%    3.363      1 Template:Userdocnavi/fr
- 12.77%    2.599      2 Template:Docnav/fr
-  9.18%    1.870      1 Template:GuiCommand/fr
-  7.08%    1.442      1 Template:MenuCommand
-  6.26%    1.274      1 Template:Caption
-  4.91%    0.999      2 Template:Button
+100.00%   22.661      1 -total
+ 41.50%    9.405      1 Template:BIM_Tools_navi/fr
+ 32.22%    7.301      2 Template:Navigation_menu_2
+ 14.61%    3.312      1 Template:Userdocnavi/fr
+ 13.23%    2.998      2 Template:Docnav/fr
+ 10.91%    2.472      1 Template:GuiCommand/fr
+  6.38%    1.445      1 Template:Caption
+  4.95%    1.122      2 Template:Button
+  4.93%    1.117      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116191708 and revision id 1739169. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192029 and revision id 1739171. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
