Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -59,7 +59,7 @@
 </p><p>Le gestionnaire de calques vous permet de g&eacute;rer vos calques, d'ajouter ou de supprimer des calques ou de modifier leurs propri&eacute;t&eacute;s visuelles. Pour ajouter des objets &agrave; un calque, faites-les simplement glisser dans le calque de l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour les supprimer, faites-les glisser du calque et d&eacute;posez-les dans la racine du document.
 </p>
 <h2><span class="mw-headline" id="NativeIFC">NativeIFC</span></h2>
-<p>Cet outil est exactement le m&ecirc;me que l'outil <a href="../fr/Draft_LayerManager.html" title="Draft LayerManager/fr">Gestionnaire de calques</a> et cr&eacute;e le m&ecirc;me objet de calque. Il n'y a qu'une seule diff&eacute;rence&nbsp;: il prend en charge les objets <a href="../index.php?title=NativeIFC/fr&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/fr (page does not exist)">NativeIFC</a>&nbsp;:
+<p>Cet outil est exactement le m&ecirc;me que l'outil <a href="../fr/Draft_LayerManager.html" title="Draft LayerManager/fr">Draft Gestionnaire de calques</a> et cr&eacute;e le m&ecirc;me objet de calque. Il n'y a qu'une seule diff&eacute;rence&nbsp;: il prend en charge les objets <a href="../fr/Native_IFC.html" title="Native IFC/fr">NativeIFC</a>&nbsp;:
 </p>
 <ul><li>Une ic&ocirc;ne IFC indique si un calque fait partie d'un projet IFC ou non.</li>
 <li>Un bouton <b>Assigner &agrave; un IFC</b> permet de d&eacute;placer un calque vers un projet IFC et de la transformer ainsi en calque IFC.</li></ul>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192144
+Cached time: 20260116192249
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.137 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27418/2097152 bytes
 Template argument size: 10408/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.235      1 -total
- 44.91%   13.578      1 Template:BIM_Tools_navi/fr
- 35.63%   10.772      2 Template:Navigation_menu_2
- 17.69%    5.349      1 Template:Userdocnavi/fr
- 12.56%    3.799      2 Template:Docnav/fr
-  8.72%    2.637      1 Template:GuiCommand/fr
-  6.76%    2.045      1 Template:Caption
-  3.43%    1.036      2 Template:Button
-  3.30%    0.998      1 Template:MenuCommand
+100.00%   24.901      1 -total
+ 31.09%    7.742      1 Template:BIM_Tools_navi/fr
+ 23.72%    5.906      2 Template:Navigation_menu_2
+ 16.19%    4.032      1 Template:GuiCommand/fr
+ 14.76%    3.675      1 Template:Userdocnavi/fr
+ 13.22%    3.291      2 Template:Docnav/fr
+  9.85%    2.452      1 Template:MenuCommand
+  7.26%    1.809      1 Template:Caption
+  4.84%    1.204      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192143 and revision id 1739173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192249 and revision id 1739175. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
