Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -63,7 +63,7 @@
 </p>
 <ul><li>Une ic&ocirc;ne IFC indique si un calque fait partie d'un projet IFC ou non.</li>
 <li>Un bouton <b>Assigner &agrave; un IFC</b> permet de d&eacute;placer un calque vers un projet IFC et de la transformer ainsi en calque IFC.</li></ul>
-<p>La mise en &oelig;uvre de <a href="../fr/Native_IFC.html" title="Native IFC/fr">IFC natif</a> est en cours. Les utilisateurs peuvent consulter le <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">blog de Yorik</a> pour obtenir des informations actualis&eacute;es de la part d'un d&eacute;veloppeur principal de la fonction NativeIFC dans FreeCAD.
+<p>L'implementation de <a href="../fr/Native_IFC.html" title="Native IFC/fr">IFC natif</a> est en cours. Les utilisateurs peuvent consulter le <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">blog de Yorik</a> pour obtenir des informations actualis&eacute;es de la part d'un d&eacute;veloppeur principal de la fonction NativeIFC dans FreeCAD.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192249
+Cached time: 20260116192323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.137 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27418/2097152 bytes
 Template argument size: 10408/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.901      1 -total
- 31.09%    7.742      1 Template:BIM_Tools_navi/fr
- 23.72%    5.906      2 Template:Navigation_menu_2
- 16.19%    4.032      1 Template:GuiCommand/fr
- 14.76%    3.675      1 Template:Userdocnavi/fr
- 13.22%    3.291      2 Template:Docnav/fr
-  9.85%    2.452      1 Template:MenuCommand
-  7.26%    1.809      1 Template:Caption
-  4.84%    1.204      2 Template:Button
+100.00%   32.110      1 -total
+ 45.26%   14.533      1 Template:BIM_Tools_navi/fr
+ 37.12%   11.919      2 Template:Navigation_menu_2
+ 15.46%    4.965      1 Template:Userdocnavi/fr
+ 11.57%    3.715      2 Template:Docnav/fr
+ 11.21%    3.599      1 Template:GuiCommand/fr
+  5.70%    1.831      1 Template:Caption
+  4.20%    1.347      2 Template:Button
+  4.03%    1.294      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192249 and revision id 1739175. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192323 and revision id 1739177. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
