Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -69,7 +69,7 @@
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">G&eacute;rer les calques</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>G&eacute;rer &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> G&eacute;rer les couches</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>Gestion &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> G&eacute;rer les calques</b> du menu.</li></ul></li>
 <li>D&eacute;finissez les options et appuyez sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
 <p>Pour plus d'informations sur les param&egrave;tres, consultez la documentation relative aux <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calque</a>.
 </p><p><span id="Notes"></span>
@@ -128,15 +128,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192323
+Cached time: 20260116192416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.142 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.134 seconds
 Preprocessor visited node count: 443/1000000
-Post&#8208;expand include size: 27418/2097152 bytes
-Template argument size: 10408/2097152 bytes
+Post&#8208;expand include size: 27419/2097152 bytes
+Template argument size: 10409/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.110      1 -total
- 45.26%   14.533      1 Template:BIM_Tools_navi/fr
- 37.12%   11.919      2 Template:Navigation_menu_2
- 15.46%    4.965      1 Template:Userdocnavi/fr
- 11.57%    3.715      2 Template:Docnav/fr
- 11.21%    3.599      1 Template:GuiCommand/fr
-  5.70%    1.831      1 Template:Caption
-  4.20%    1.347      2 Template:Button
-  4.03%    1.294      1 Template:MenuCommand
+100.00%   30.779      1 -total
+ 37.46%   11.529      1 Template:BIM_Tools_navi/fr
+ 28.81%    8.866      2 Template:Navigation_menu_2
+ 13.88%    4.273      1 Template:GuiCommand/fr
+ 13.76%    4.235      1 Template:Userdocnavi/fr
+  9.94%    3.058      2 Template:Docnav/fr
+  7.72%    2.376      1 Template:Caption
+  7.43%    2.287      2 Template:Button
+  6.68%    2.057      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192323 and revision id 1739177. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192416 and revision id 1739179. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
