--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -14,7 +14,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>BIM Calques
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>BIM Gestionnaire de calques
 </p>
 </td></tr>
 <tr>
@@ -128,15 +128,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192459
+Cached time: 20260116192506
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.093 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 443/1000000
-Post&#8208;expand include size: 27419/2097152 bytes
-Template argument size: 10409/2097152 bytes
+Post&#8208;expand include size: 27451/2097152 bytes
+Template argument size: 10441/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.349      1 -total
- 36.47%   10.339      1 Template:BIM_Tools_navi/fr
- 24.52%    6.950      2 Template:Navigation_menu_2
- 13.48%    3.823      1 Template:Userdocnavi/fr
- 12.91%    3.661      1 Template:GuiCommand/fr
- 10.48%    2.970      1 Template:Caption
-  9.19%    2.606      2 Template:Docnav/fr
-  7.77%    2.204      1 Template:MenuCommand
-  7.22%    2.046      2 Template:Button
+100.00%   22.671      1 -total
+ 41.63%    9.438      1 Template:BIM_Tools_navi/fr
+ 28.94%    6.561      2 Template:Navigation_menu_2
+ 16.63%    3.771      1 Template:Userdocnavi/fr
+ 10.69%    2.424      2 Template:Docnav/fr
+  9.53%    2.160      1 Template:GuiCommand/fr
+  8.77%    1.988      1 Template:Caption
+  5.65%    1.282      2 Template:Button
+  4.58%    1.039      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192459 and revision id 1739181. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192506 and revision id 1739184. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
