--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -51,7 +51,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>Calques</b> vous permet de g&eacute;rer les <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">calques</a>. Les calques sont un type sp&eacute;cial de groupe qui contr&ocirc;le les propri&eacute;t&eacute;s visuelles des objets plac&eacute;s &agrave; l'int&eacute;rieur. En modifiant les propri&eacute;t&eacute;s du calque, telles que la largeur de ligne, la couleur de ligne, la couleur de forme et la transparence, les modifications sont propag&eacute;es &agrave; ses objets enfants. Les calques n'interf&egrave;rent avec aucune autre structure FreeCAD telle que des <a href="../fr/Std_Group.html" title="Std Group/fr">groupes</a> ou des <a href="../fr/Arch_BuildingPart.html" title="Arch BuildingPart/fr">parties de b&acirc;timent</a> donc tout objet peut &ecirc;tre &agrave; la fois partie d'un calque et partie d'un groupe.
+<p>L'outil <b>Gestionnaire de calques</b> vous permet de g&eacute;rer les <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">calques</a>. Les calques sont un type sp&eacute;cial de groupe qui contr&ocirc;le les propri&eacute;t&eacute;s visuelles des objets plac&eacute;s &agrave; l'int&eacute;rieur. En modifiant les propri&eacute;t&eacute;s du calque, telles que la largeur de ligne, la couleur de ligne, la couleur de forme et la transparence, les modifications sont propag&eacute;es &agrave; ses objets enfants. Les calques n'interf&egrave;rent avec aucune autre structure FreeCAD telle que des <a href="../fr/Std_Group.html" title="Std Group/fr">groupes</a> ou des <a href="../fr/Arch_BuildingPart.html" title="Arch BuildingPart/fr">parties de b&acirc;timent</a> donc tout objet peut &ecirc;tre &agrave; la fois partie d'un calque et partie d'un groupe.
 </p><p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Gestionnaire de calques</p>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192506
+Cached time: 20260116192518
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.124 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27451/2097152 bytes
 Template argument size: 10441/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.671      1 -total
- 41.63%    9.438      1 Template:BIM_Tools_navi/fr
- 28.94%    6.561      2 Template:Navigation_menu_2
- 16.63%    3.771      1 Template:Userdocnavi/fr
- 10.69%    2.424      2 Template:Docnav/fr
-  9.53%    2.160      1 Template:GuiCommand/fr
-  8.77%    1.988      1 Template:Caption
-  5.65%    1.282      2 Template:Button
-  4.58%    1.039      1 Template:MenuCommand
+100.00%   20.092      1 -total
+ 40.24%    8.086      1 Template:BIM_Tools_navi/fr
+ 27.94%    5.614      2 Template:Navigation_menu_2
+ 13.52%    2.717      1 Template:Userdocnavi/fr
+ 11.96%    2.402      2 Template:Docnav/fr
+ 11.84%    2.379      1 Template:GuiCommand/fr
+  7.12%    1.431      2 Template:Button
+  7.00%    1.407      1 Template:Caption
+  5.21%    1.047      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192506 and revision id 1739184. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192518 and revision id 1739186. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
