Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -56,7 +56,7 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Gestionnaire de calques</p>
 <p>Les calques sont import&eacute;s et export&eacute;s de/vers <a href="../fr/Arch_IFC.html" title="Arch IFC/fr">Arch IFC</a> et <a href="../fr/Draft_DXF.html" title="Draft DXF/fr">Draft DXF/DWG</a>.
-</p><p>Le gestionnaire de calques vous permet de g&eacute;rer vos calques, d'ajouter ou de supprimer des calques ou de modifier leurs propri&eacute;t&eacute;s visuelles. Pour ajouter des objets &agrave; un calque, faites-les simplement glisser dans le calque de l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour les supprimer, faites-les glisser du calque et d&eacute;posez-les dans la racine du document.
+</p><p>Le gestionnaire de calques vous permet de g&eacute;rer vos calques, d'ajouter ou de supprimer des calques ou de modifier leurs propri&eacute;t&eacute;s d'affichage. Pour ajouter des objets &agrave; un calque, faites-les simplement glisser dans le calque de l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Pour les supprimer, faites-les glisser du calque et d&eacute;posez-les dans la racine du document.
 </p>
 <h2><span class="mw-headline" id="NativeIFC">NativeIFC</span></h2>
 <p>Cet outil est exactement le m&ecirc;me que l'outil <a href="../fr/Draft_LayerManager.html" title="Draft LayerManager/fr">Draft Gestionnaire de calques</a> et cr&eacute;e le m&ecirc;me objet de calque. Il n'y a qu'une seule diff&eacute;rence&nbsp;: il prend en charge les objets <a href="../fr/Native_IFC.html" title="Native IFC/fr">NativeIFC</a>&nbsp;:
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192518
+Cached time: 20260116192542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.087 seconds
-Real time usage: 0.116 seconds
+Real time usage: 0.127 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27451/2097152 bytes
 Template argument size: 10441/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.092      1 -total
- 40.24%    8.086      1 Template:BIM_Tools_navi/fr
- 27.94%    5.614      2 Template:Navigation_menu_2
- 13.52%    2.717      1 Template:Userdocnavi/fr
- 11.96%    2.402      2 Template:Docnav/fr
- 11.84%    2.379      1 Template:GuiCommand/fr
-  7.12%    1.431      2 Template:Button
-  7.00%    1.407      1 Template:Caption
-  5.21%    1.047      1 Template:MenuCommand
+100.00%   29.498      1 -total
+ 41.24%   12.166      1 Template:BIM_Tools_navi/fr
+ 26.68%    7.871      2 Template:Navigation_menu_2
+ 16.62%    4.903      1 Template:Userdocnavi/fr
+ 14.28%    4.211      1 Template:GuiCommand/fr
+  9.75%    2.877      2 Template:Docnav/fr
+  7.08%    2.088      1 Template:Caption
+  4.29%    1.266      2 Template:Button
+  4.11%    1.212      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192518 and revision id 1739186. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192542 and revision id 1739188. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
