Updated page BIM Layers/fr

--- a/wiki/fr/BIM_Layers.html
+++ b/wiki/fr/BIM_Layers.html
@@ -75,7 +75,7 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
-<ul><li>Utilisez le <a class="mw-selflink selflink">gestionnaire de calques BIM</a> pour cr&eacute;er de nouveaux calques BIM. Pour cr&eacute;er des <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a>, appuyez sur le bouton <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> dans la <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">barre de Draft</a>.</li>
+<ul><li>Utilisez le <a class="mw-selflink selflink">gestionnaire de calques de BIM</a> pour cr&eacute;er de nouveaux calques BIM. Pour cr&eacute;er des <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a>, appuyez sur le bouton <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> dans la <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">barre de Draft</a>.</li>
 <li>Les <a href="../fr/Draft_Layer.html" title="Draft Layer/fr">Draft Calques</a> ont des param&egrave;tres l&eacute;g&egrave;rement diff&eacute;rents de ceux des calques BIM. Ne les m&eacute;langez pas, sauf si vous comprenez les <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">diff&eacute;rences</a>.</li></ul>
 <p><br>
 </p>
@@ -128,12 +128,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116192542
+Cached time: 20260116192718
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.127 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 443/1000000
 Post&#8208;expand include size: 27451/2097152 bytes
 Template argument size: 10441/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1127/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.498      1 -total
- 41.24%   12.166      1 Template:BIM_Tools_navi/fr
- 26.68%    7.871      2 Template:Navigation_menu_2
- 16.62%    4.903      1 Template:Userdocnavi/fr
- 14.28%    4.211      1 Template:GuiCommand/fr
-  9.75%    2.877      2 Template:Docnav/fr
-  7.08%    2.088      1 Template:Caption
-  4.29%    1.266      2 Template:Button
-  4.11%    1.212      1 Template:MenuCommand
+100.00%   22.123      1 -total
+ 43.32%    9.583      1 Template:BIM_Tools_navi/fr
+ 36.09%    7.983      2 Template:Navigation_menu_2
+ 17.76%    3.929      1 Template:Userdocnavi/fr
+  9.93%    2.196      2 Template:Docnav/fr
+  9.75%    2.157      1 Template:GuiCommand/fr
+  6.45%    1.426      1 Template:Caption
+  5.32%    1.178      2 Template:Button
+  4.22%    0.934      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192542 and revision id 1739188. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193655-0!canonical and timestamp 20260116192718 and revision id 1739190. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
