Updated page BIM Material/fr

--- a/wiki/fr/BIM_Material.html
+++ b/wiki/fr/BIM_Material.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Material/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Material&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="BIM Material (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Material.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--high" title="Materia&#322; BIM (96% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="Materia&#322; BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM Material/pt-br (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Calques</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Arch_Schedule.html" title="Arch Schedule/fr">Nomenclature</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Gestionnaire de calques</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">Atelier BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
@@ -244,35 +242,35 @@ Cette solution pr&eacute;sente un risque important de <b>d&eacute;synchronisatio
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115103807
+Cached time: 20260116200535
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.139 seconds
-Preprocessor visited node count: 1338/1000000
-Post&#8208;expand include size: 35849/2097152 bytes
-Template argument size: 11508/2097152 bytes
+CPU time usage: 0.120 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 1337/1000000
+Post&#8208;expand include size: 35864/2097152 bytes
+Template argument size: 11518/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1300/5000000 bytes
+Unstrip post&#8208;expand size: 1310/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.876      1 -total
- 29.30%   11.391     19 Template:PropertyData
- 22.05%    8.571     19 Template:Variable
- 19.17%    7.453      1 Template:BIM_Tools_navi/fr
- 14.55%    5.655      2 Template:Navigation_menu_2
-  8.84%    3.435      1 Template:Userdocnavi/fr
-  8.07%    3.137      1 Template:GuiCommand/fr
-  5.82%    2.264      2 Template:Docnav/fr
-  4.83%    1.879     15 Template:Incode
-  4.68%    1.819      1 Template:Caption
+100.00%   43.628      1 -total
+ 25.25%   11.017     19 Template:PropertyData
+ 21.22%    9.256      1 Template:BIM_Tools_navi/fr
+ 18.94%    8.263     19 Template:Variable
+ 17.57%    7.666      2 Template:Navigation_menu_2
+ 10.10%    4.407      1 Template:Userdocnavi/fr
+  6.38%    2.785      1 Template:Properties_Title
+  6.18%    2.697      1 Template:GuiCommand/fr
+  5.46%    2.382      2 Template:Docnav/fr
+  5.12%    2.234      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353350-0!canonical and timestamp 20260115103807 and revision id 1738660. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353350-0!canonical and timestamp 20260116200535 and revision id 1739196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
