--- a/wiki/fr/BIM_Material.html
+++ b/wiki/fr/BIM_Material.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Material/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Material&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../BIM_Material.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Material (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/BIM_Material.html" class="mw-pt-progress mw-pt-progress--complete" title="Materia&#322; BIM (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM Material/pt-br (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/BIM_Material.html" class="mw-pt-progress mw-pt-progress--low" title="BIM &#1052;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -191,14 +191,12 @@ Les utilisateurs qui ont besoin des propri&eacute;t&eacute;s physiques et d'appr
 Cette solution pr&eacute;sente un risque important de <b>d&eacute;synchronisation des donn&eacute;es</b>. Les deux attributions de mat&eacute;riaux sont totalement ind&eacute;pendantes. Si vous mettez &agrave; jour le nom ou la couleur du mat&eacute;riau BIM, cela n'aura aucune incidence sur le mat&eacute;riau Core, et vice versa. Les utilisateurs doivent s'assurer manuellement que les deux mat&eacute;riaux attribu&eacute;s restent coh&eacute;rents afin d'&eacute;viter tout conflit d'informations entre leurs analyses internes et leurs livrables BIM externes. L'objet multi-mat&eacute;riaux du syst&egrave;me BIM, qui n'a pas d'&eacute;quivalent dans le syst&egrave;me Core, doit toujours &ecirc;tre utilis&eacute; et g&eacute;r&eacute; exclusivement avec des mat&eacute;riaux BIM.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Calques</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Arch_Schedule.html" title="Arch Schedule/fr">Nomenclature</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/BIM_Layers.html" title="BIM Layers/fr">Gestionnaire de calques</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/fr&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/fr (page does not exist)">Rapport</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">Atelier BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/BIM_Workbench.html" title="BIM Workbench/fr">BIM</a>
@@ -242,35 +240,35 @@ Cette solution pr&eacute;sente un risque important de <b>d&eacute;synchronisatio
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116200535
+Cached time: 20260116200554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.160 seconds
-Preprocessor visited node count: 1337/1000000
-Post&#8208;expand include size: 35864/2097152 bytes
-Template argument size: 11518/2097152 bytes
+CPU time usage: 0.101 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 1336/1000000
+Post&#8208;expand include size: 35879/2097152 bytes
+Template argument size: 11528/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1310/5000000 bytes
+Unstrip post&#8208;expand size: 1314/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.628      1 -total
- 25.25%   11.017     19 Template:PropertyData
- 21.22%    9.256      1 Template:BIM_Tools_navi/fr
- 18.94%    8.263     19 Template:Variable
- 17.57%    7.666      2 Template:Navigation_menu_2
- 10.10%    4.407      1 Template:Userdocnavi/fr
-  6.38%    2.785      1 Template:Properties_Title
-  6.18%    2.697      1 Template:GuiCommand/fr
-  5.46%    2.382      2 Template:Docnav/fr
-  5.12%    2.234      1 Template:Caption
+100.00%   35.366      1 -total
+ 24.84%    8.786     19 Template:PropertyData
+ 21.72%    7.683      1 Template:BIM_Tools_navi/fr
+ 17.66%    6.244     19 Template:Variable
+ 16.15%    5.711      2 Template:Navigation_menu_2
+ 12.16%    4.300      1 Template:Userdocnavi/fr
+  7.77%    2.749      1 Template:GuiCommand/fr
+  7.56%    2.674      2 Template:Docnav/fr
+  6.09%    2.154      1 Template:MenuCommand
+  3.49%    1.233     15 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353350-0!canonical and timestamp 20260116200535 and revision id 1739196. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353350-0!canonical and timestamp 20260116200554 and revision id 1739198. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
